--- a/index.html
+++ b/index.html
@@ -336,5 +336,7 @@
       window.open(resumeUrl, '_blank');
     });
   </script>
+<script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+<zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cmg0cpddm001lmfa147hents6'></zapier-interfaces-chatbot-embed>
 </body>
 </html>
