--- a/index.html
+++ b/index.html
@@ -336,5 +336,12 @@
       window.open(resumeUrl, '_blank');
     });
   </script>
+ <script>
+    document.getElementById('downloadResume').addEventListener('click', function(e){
+      e.preventDefault();
+      const resumeUrl = "https://github.com/AnshPradhan14/Ansh_Final_Resume/raw/main/Ansh_Final_Resume.pdf";
+      window.open(resumeUrl, '_blank');
+    });
+  </script>
 </body>
 </html>
