--- a/index.html
+++ b/index.html
@@ -336,12 +336,7 @@
       window.open(resumeUrl, '_blank');
     });
   </script>
- <script>
-    document.getElementById('downloadResume').addEventListener('click', function(e){
-      e.preventDefault();
-      const resumeUrl = "https://github.com/AnshPradhan14/Ansh_Final_Resume/raw/main/Ansh_Final_Resume.pdf";
-      window.open(resumeUrl, '_blank');
-    });
-  </script>
+<script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+<zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cmg0cpddm001lmfa147hents6'></zapier-interfaces-chatbot-embed>
 </body>
 </html>
